[build-system]
requires = ["uv>=0.1.0", "setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "igev-plusplus"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
]
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "tqdm",
    "scipy",
    "rerun-sdk",
    "scikit-image",
    "tensorboard",
    "matplotlib",
    "timm==0.5.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["igev_plusplus*"]
exclude = []
